--- a/trunk/ui/assets/human/buildstat.cfg
+++ b/trunk/ui/assets/human/buildstat.cfg
@@ -17,9 +17,9 @@ healthElevatedColor 0.82 0.82 0.00 1
 healthGuardedColor  0.19 0.65 0.00 1
 healthLowColor      0.27 0.49 0.55 1
 
-overlayShader       "ui/assets/human/buildstat/overlay"
-overlayWidth        156
-overlayHeight       36
+//overlayShader       "ui/assets/human/buildstat/overlay"
+//overlayWidth        156
+//overlayHeight       36
 
 // PERCENT of frameHeight to use for top/bottom margin of icons/text 
 // value is for total of top and bottom margins
