Added the new font from Tremfusion. Also moved some shaders around and added a scroll bar from Trepidus.

--- a/trunk/data/models/weapons/xael/weapon.cfg
+++ b/trunk/data/models/weapons/xael/weapon.cfg
@@ -26,7 +26,7 @@ secondary
   missileSprite         56 gfx/xael/primary
   missileSound          models/weapons/lcannon/missle.wav
   missileParticleSystem models/weapons/xael/missilePS
-  //missileTrailSystem models/weapons/xael/trail
+  missileTrailSystem models/weapons/xael/trail
 
 
   flashDlightColor      0.0 1.0 0.1
