--- a/data/models/weapons/prifle/weapon.cfg
+++ b/data/models/weapons/prifle/weapon.cfg
@@ -18,7 +18,7 @@ primary
 secondary
 {
   missileSprite     8 gfx/prifle/red_blob
-  //missileTrailSystem models/weapons/prifle/missileTS
+  missileTrailSystem models/weapons/prifle/missileTS
 
   flashDlightColor  1.0 0.0 0.0
   flashSound        0 models/weapons/prifle/flash0.wav
