--- a/trunk/data/models/weapons/xael/weapon.cfg
+++ b/trunk/data/models/weapons/xael/weapon.cfg
@@ -1,5 +1,5 @@
 weaponModel       models/weapons/xael/xael.md3
-icon              icons/iconw_lucifer
+icon              icons/iconw_xael
 crosshair         48 gfx/2d/crosshair-lcannon_s
 
 idleSound         models/weapons/lcannon/idle.wav
@@ -38,5 +38,3 @@ secondary
 
   impactParticleSystem  models/weapons/xael/secondaryImpactPS
 }
-
-
