--- a/ui/assets/human/buildstat.cfg
+++ b/ui/assets/human/buildstat.cfg
@@ -34,6 +34,7 @@ horizontalMargin    1.0
 
 markedShader        "ui/assets/human/buildstat/mark"
 noPowerShader       "ui/assets/human/buildstat/nopower"
+esdShader               "ui/assets/alien/buildstat/esd"
 
 backColor           1.0 1.0 1.0 1
 foreColor           0.0 0.0 0.0 1
